feat: new endpoints - readded roles - new tests (#15)
* feat: new endpoints - readded roles - new tests

* feat: fixed import data

* feat: expose roles as array

* fix: sonar issues

* feat: updated parent pom to 0.3.0

* feat: removed token property to align with new parent pom

* feat: fixed sonar issues

* feat: replaced sql with jpa statement

* feat: io.github to org.tkit
